workspace = { members = ["lib"] }
[package]
name = "solana-mirror-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
num-bigint = "0.4.6"
spl-token = "6.0.0"
base64 = "0.22.1"
lib = { path = "./lib" }
solana-sdk = "2.0.5"
solana-client = "2.0"
