workspace = { members = ["lib"] }
[package]
name = "solana-mirror-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
spl-token = "6.0.0"
lib = { path = "./lib" }
solana-sdk = "2.0.5"
dotenv = "0.15" 
openssl = { version = "0.10", features = ["vendored"] }
once_cell = "1.20.2"
