[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mpl-token-metadata = "4.1.2"
solana-sdk = "2.0.5"
solana-client = "2.0"
solana-program = "1.14.14"
num-bigint = "0.4.6"
spl-token = "6.0.0"
solana-account-decoder = "2.0.5"
base64 = "0.22.1"
jupiter-swap-api-client = "0.1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
